--- a/style.css
+++ b/style.css
@@ -58,5 +58,10 @@ body {
 .botoes {
   display: block;
   @media screen and (min-width: 768px) {
+    .botoes {
+        display:flex;
+    }
 }
+
+
 }
