--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ body {
     .botoes {
         display:flex;
     }
+    .botao:first-child {
+        border-radius: 40px 0 0 0;
+      }
+    }
 }
 
 
