--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ body {
 .botoes {
   display: block;}
   .ativo {
+    .abas-textos {
+      background-color: var(--texto-fundo);
+    }
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
   }
