--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ body {
   .ativo {
     .abas-textos {
       background-color: var(--texto-fundo);
+      padding: 40px;
+      border-radius: 0 0 40px 40px;
     }
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
