--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 
 .botoes {
   display: block;}
-  .ativo {
+  .botao.ativo {
     .abas-textos {
       background-color: var(--texto-fundo);
       padding: 40px;
